[project]
name = "illustrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair>=5.5.0",
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "plotly>=6.1.1",
    "seaborn>=0.13.2",
    "vl-convert-python>=1.7.0",
]
